html/assets/css/main.css
/* ... */
#podcast-done {
  display: none;
}
form#donate {
  text-align:center;
  margin-top: 0;
}
#podcast-url {
  text-transform: none;
  white-space: normal;
}
#description h2 {
  text-align: left;
  margin-bottom: 0.25em;
  color: rgba(255,255,255,0.9);
  border-bottom: 1px solid rgba(255,255,255,0.7);
}
#description p {
  margin: 0.45em 0;
  line-height: 1.35em;
}
#description {
  margin: 0.75em;
  z-index: 100;
  padding: 0.35em 0.75em;
  position: absolute;
  display: block;
  right: 0;
  border-radius: 4px;
  color: white;
  display: none;
  background: rgba(0,0,0,0.55);
}
#time * {
  text-align: right;
}
#ampm a{
  width: 100%;
  line-height: 45px;
  text-align: center;
  padding: 0;
}
#podcast-url:hover {
  background: #3C9767;
  box-shadow: inset 0 0 10px 3px rgba(78, 185, 128, 0.85);
}
#podcast-url h3 {
  font-weight: normal;
  font-size: 1.6em;
  letter-spacing: normal;
  color: white;
  margin: 0;
  text-transform: none;
  display: inline-block;
  line-height: 1em;
}
#rss-top {
  text-align: left;
}
/* from http://stackoverflow.com/questions/10698900/css-two-column-full-width */
#rss-img {
  float: left;
  width: 64px;
  min-height: 64px;
}
#rss-header {
  line-height: 1em;
  text-align: left;
  font-weight: normal;
  margin-left: 64px;
  min-height: 64px;
}
#rss-title {
  text-align: left;
}
#rss-time { 
  display: block; 
  width: 15em;
}
#podcast-url img {
  vertical-align: bottom;
  display: inline-block;
}
#podcast-url {
  cursor: pointer;
  color: white;
  font-weight: bold;
  text-align: left;
  display: inline-block;
  font-size: 1.3em;
  border-radius: 8px;
  padding: 0.5em;
  border: 2px solid rgba(78, 185, 128, 1);
  background: rgba(78, 185, 128, 0.85);
}
#podcast-link { 
  display: block;
  color: white;
  text-decoration: none;
  border-bottom: 0;
}
#start {
  width: 13em;
  display: inline-block;
  text-align: left;
  vertical-align: top;
  border-radius: 8px;
}
#ampm {
  margin-left: -21.8em;
  border: 0;
  margin-top: 2px;
  border-radius: 0 8px 8px 0;
}
#ampm li{
  width: 3em;
  margin-bottom: 0;
}
small { 
  font-size: 0.7em;
}
@media screen and (max-width: 1280px) {
  #description {
    bottom: 0;
  }
  #time label {
    text-align: center;
  }
  #rss-time { 
    font-size: 0.75em
  }
  #podcast-link { 
    font-size: 90%;
  }
  #or {
    display: block;
    font-size: 1.5em;
    margin: 0.35em;
  }
  #ampm a{
    line-height: 38px;
  }
}

